<?xml version="1.0" encoding="utf-8"?>
<resources>    
    <string name="app_name">我帮圈圈</string>


    <string name="nav_app_name">仿微信UI</string>
    <string name="nav_hello_world">Hello world!</string>
    <string name="nav_menu_settings">Settings</string>
    <string name="nav_title_activity_strat">仿微信UI</string>

    <string name="nav_whatsnew_page01">"微信\n超过2亿人使用的手机应用"</string>
    <string name="nav_whatsnew_page02">"按住就能说话\n聊天是如此简单轻松"</string>
    <string name="nav_whatsnew_page03">"透过视频聊天\n你甚至可以和朋友们\n面对面沟通"</string>
    <string name="nav_whatsnew_page04">"摇一摇手机\n或者看看附近的人\n认识更多的朋友"</string>
    <string name="nav_whatsnew_page05">"你还可以通过朋友圈\n和朋友们分享彼此的生活"</string>
    <string name="nav_whatsnew_page06">"微信，是一个生活方式"</string>
    <string name="nav_whatsnew_start_btn">"进入微信"</string>
    
    <string name="main_menu_login">用户登录</string>
    <string name="main_menu_logout">注销登录</string>
    <string name="main_menu_myinfo">我的资料</string>
    <string name="main_menu_myinfo_edit">编辑资料</string>
    <string name="main_menu_software">排行</string>
    <string name="main_menu_search">串校</string>
    <string name="main_menu_picshow">显示图片</string>
    <string name="main_menu_picnoshow">隐藏图片</string>
    <string name="main_menu_cache">清除缓存</string>
    <string name="main_menu_email">意见反馈</string>
    <string name="main_menu_about">关于我们</string>
    <string name="main_menu_setting">系统设置</string>
    <string name="main_menu_exit">退出程序</string>

    <string name="footer_button_home">首页</string>
    <string name="footer_button_word">消息</string>
    <string name="footer_button_nest">小窝</string>
    <string name="footer_button_rank">排行</string>
    <string name="footer_button_more">更多</string>
    
    <string name="frame_title_news_lastest">动态</string>
    <string name="frame_title_news_blog">最新博客</string>
    <string name="frame_title_news_recommend">推荐阅读</string>

    <string name="frame_title_question_ask">浏览</string>
    <string name="frame_title_question_share">评论</string>
    <string name="frame_title_question_other">扩散</string>
    <string name="frame_title_question_job">帮助</string>
    <string name="frame_title_question_site">追问</string>
    <string name="frame_title_tweet_lastest">校园动态</string>
    <string name="frame_title_tweet_hot">看我圈的</string>
    <string name="frame_title_tweet_my">只看帮助</string>
    <!--<string name="frame_title_tweet_send">动弹一下</string>-->
    <!--<string name="frame_title_active_lastest">最新动态</string>-->
    <!--<string name="frame_title_active_atme">我</string>-->
    <!--<string name="frame_title_active_comment">评论</string>-->
    <string name="frame_title_word_system">系统</string>
    <string name="frame_title_word_comment">评论</string>
    <string name="frame_title_word_atme">\@我</string>
    <string name="frame_title_word_active">活跃</string>
    <string name="frame_title_word_chat">悄悄话</string>
    
    <string name="footbar_refresh">刷新</string>
    <string name="footbar_comment">评论</string>
    <string name="footbar_share">分享</string>
    <string name="footbar_favorite">收藏</string>
    <string name="footbar_more">更多</string>
    
    <string name="login_dialog_logo">我帮圈圈</string>
    <string name="login_dialog_account">账号:</string>
    <string name="login_dialog_account_hint">输入账号/邮箱</string>
    <string name="login_dialog_password">密码:</string>
    <string name="login_dialog_password_hint">输入密码</string>
    <string name="login_dialog_reg">注册帐号</string>
    <string name="login_dialog_login">登  录</string>
    <string name="login_dialog_login_wb">微博登录</string>
    <string name="login_dialog_rememberPW">记住密码:</string>
    <string name="login_dialog_autoLogin">自动登录:</string>
    <string name="login_dialog_remember">记住密码</string>
    <string name="login_dialog_dive">潜水登录</string>
    
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
    <string name="pull_to_refresh_update">最近更新：</string>
    
    <string name="news_detail_head_title">新闻正文</string>
    <string name="news_detail_lable_pub">发布于</string>
    <string name="question_detail_head_title">帖子正文</string>
    <string name="question_pub_head_title">我要发帖</string>
    <string name="blog_detail_head_title">博客正文</string>
    <string name="software_detail_head_title">软件详情</string>
    <string name="tweet_detail_head_title">信息正文</string>
    <string name="tweet_pub_head_title">记录我的大学生活</string>
    <string name="message_detail_head_title">我和%s的悄悄话</string>
    <string name="user_center_head_title">用户空间</string>
    
    <string name="user_friend_head_title">我的好友</string>
    <string name="user_friend_follower">我圈(%d)</string>
    <string name="user_friend_fans">圈子(%d)</string>
    
    <string name="comment_list_head_title">网友评论</string>
    <string name="comment_listitem_type">发布于</string>
    <string name="comment_pub_head_title">评论回复</string>
    <string name="comment_pub_content_hint">输入评论</string>
    <string name="comment_reply_title">---共有 %d 条评论---</string>
    
    <string name="img_from_camera">手机拍照</string>
    <string name="img_from_album">手机相册</string>
    <string name="ui_insert_image">插入图片</string>  
    
    <string name="setting_head_title">系统设置</string>
    <string name="loading">loading...</string>
    <string name="reward_prompt">活跃悬赏</string>
    <string name="enrol_prompt">入学年份</string>
</resources>
