<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   	android:orientation="vertical" 
   	android:layout_width="fill_parent" 
   	android:layout_height="fill_parent">
   	<LinearLayout 
		android:layout_width="fill_parent" 
   		android:layout_height="35.0dip" 
   		android:orientation="horizontal" 
   		android:gravity="center_vertical">
       	<Button 
	        android:id="@+id/frame_btn_word_system"
			style="@style/frame_button"
         	android:text="@string/frame_title_word_system"/>
       	<ImageView android:layout_width="wrap_content" android:layout_height="fill_parent" android:background="@drawable/frame_button_cutline"/>
		<Button 
			android:id="@+id/frame_btn_word_atme"
			style="@style/frame_button"
         	android:text="@string/frame_title_word_atme"/>
		<ImageView android:layout_width="wrap_content" android:layout_height="fill_parent" android:background="@drawable/frame_button_cutline"/>
		<Button 
			android:id="@+id/frame_btn_word_comment"
			style="@style/frame_button"
         	android:text="@string/frame_title_word_comment"/>
		<ImageView android:layout_width="wrap_content" android:layout_height="fill_parent" android:background="@drawable/frame_button_cutline"/>
		<Button
			android:id="@+id/frame_btn_word_active"
			style="@style/frame_button"
         	android:text="@string/frame_title_word_active"/>
		<ImageView android:layout_width="wrap_content" android:layout_height="fill_parent" android:background="@drawable/frame_button_cutline"/>
		<Button
			android:id="@+id/frame_btn_word_chat"
			style="@style/frame_button"
         	android:text="@string/frame_title_word_chat"/>
	</LinearLayout>
	
	<com.ihelpoo.app.widget.PullToRefreshListView
	  	android:id="@+id/frame_listview_word"
	    style="@style/widget_listview"/>

    <com.ihelpoo.app.widget.PullToRefreshListView
        android:id="@+id/frame_listview_notice"
        style="@style/widget_listview"
        android:divider="@null"
        android:visibility="gone"/>
	
	<com.ihelpoo.app.widget.PullToRefreshListView
	  	android:id="@+id/frame_listview_message"
	    style="@style/widget_listview"
	    android:divider="@null"
		android:visibility="gone"/>
</LinearLayout>