<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent">
	<LinearLayout 
		android:layout_width="fill_parent" 
		android:layout_height="35.0dip"
		android:orientation="horizontal" 
		android:gravity="center_vertical">
     	<Button
     		android:id="@+id/frame_btn_home_stream"
     		style="@style/frame_button"
            android:drawableLeft="@drawable/frame_home_btn_stream"
            android:paddingLeft="@dimen/space_10"
            android:gravity="left|center"
         	android:text="@string/frame_title_tweet_lastest"/>
        <ImageView android:layout_width="wrap_content" android:layout_height="fill_parent" android:background="@drawable/frame_button_cutline"/>
     	<Button
     		android:id="@+id/frame_btn_home_mine"
     		style="@style/frame_button"
            android:paddingRight="@dimen/space_10"
            android:gravity="left|center"
            android:drawableLeft="@drawable/frame_home_btn_mine"
         	android:text="@string/frame_title_tweet_hot"/>
	    <ImageView android:layout_width="wrap_content" android:layout_height="fill_parent" android:background="@drawable/frame_button_cutline"/>
     	<Button
     		android:id="@+id/frame_btn_home_help"
     		style="@style/frame_button"
            android:paddingRight="@dimen/space_10"
            android:gravity="left|center"
            android:drawableLeft="@drawable/frame_home_btn_help"
         	android:text="@string/frame_title_tweet_my"/>
    </LinearLayout>
    
	<com.ihelpoo.app.widget.PullToRefreshListView
	  	android:id="@+id/frame_listview_tweet"
	    style="@style/widget_listview"/>
	
</LinearLayout>